fix wrapping of tags

--- a/themes/bdev/assets/sass/components/_tags.scss
+++ b/themes/bdev/assets/sass/components/_tags.scss
@@ -1,5 +1,6 @@
 aside.tags {
     display: flex;
+    align-items: center;
     overflow: hidden;
     margin: 2rem -2rem -2rem -2rem;
     border-top: 1px solid rgba(0, 0, 0, 0.075);
@@ -21,6 +22,7 @@ aside.tags {
 
     ul {
         display: flex;
+        flex-wrap: wrap;
         font-size: 1rem;
         margin: 0;
         list-style: none;
